--- a/discord-app/index.html
+++ b/discord-app/index.html
@@ -47,7 +47,20 @@
                 <div class="auth-separator" role="separator" aria-hidden="true">
                     <span>ou</span>
                 </div>
-                <button type="button" class="btn-discord" id="auth-discord-btn">Utiliser Discord</button>
+                <button type="button" class="btn-discord" id="auth-discord-btn">
+                    <svg width="20" height="16" viewBox="0 0 71 55" fill="currentColor" style="vertical-align:middle;margin-right:8px">
+                        <path d="M60.1 4.9A58.5 58.5 0 0045.4.2a.2.2 0 00-.2.1 40.8 40.8 0 00-1.8 3.7 54 54 0 00-16.2 0A39.5 39.5 0 0025.4.3a.2.2 0 00-.2-.1A58.4 58.4 0 0010.5 5 59.7 59.7 0 00.4 45a.3.3 0 00.1.2A58.9 58.9 0 0018.2 55a.2.2 0 00.3-.1 42.2 42.2 0 003.6-5.9.2.2 0 00-.1-.3 38.8 38.8 0 01-5.5-2.7.2.2 0 01 0-.4l1.1-.9a.2.2 0 01.2 0 42 42 0 0035.8 0 .2.2 0 01.2 0l1.1.9a.2.2 0 010 .4 36.4 36.4 0 01-5.5 2.7.2.2 0 00-.1.3 47.4 47.4 0 003.6 5.9.2.2 0 00.3.1A58.7 58.7 0 0070.7 45a.3.3 0 00.1-.2c1.2-12.6-2-23.6-8.7-33.3zM23.7 36.9c-2.9 0-5.3-2.7-5.3-5.9s2.3-5.9 5.3-5.9 5.3 2.7 5.3 5.9-2.4 5.9-5.3 5.9zm19.6 0c-2.9 0-5.3-2.7-5.3-5.9s2.3-5.9 5.3-5.9 5.3 2.7 5.3 5.9-2.3 5.9-5.3 5.9z"/>
+                    </svg>
+                    Connexion avec QR Discord
+                </button>
+                <div id="auth-discord-qr" class="auth-discord-qr hidden" aria-live="polite">
+                    <div class="auth-discord-qr-box">
+                        <img id="auth-discord-qr-image" alt="QR Discord" class="hidden" />
+                        <p id="auth-discord-qr-placeholder">Cliquez sur “Connexion avec QR Discord” pour générer le QR.</p>
+                    </div>
+                    <p id="auth-discord-qr-status" class="auth-discord-qr-status"></p>
+                    <button type="button" class="btn-secondary hidden" id="auth-discord-cancel-btn">Annuler</button>
+                </div>
                 <p id="auth-error" class="error-text"></p>
             </form>
         </div>
@@ -66,14 +79,23 @@
                 </svg>
             </div>
             <div class="guild-separator"></div>
-            <div class="guild-icon server-icon active" title="Voxium Server">
-                <span>VX</span>
+            <div id="local-guilds-container">
+                <div class="guild-icon server-icon active" title="Voxium Server">
+                    <span>VX</span>
+                </div>
+                <div class="guild-separator"></div>
+                <div class="guild-icon add-server-icon" id="add-server-btn" title="Ajouter un serveur">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                        <line x1="5" y1="12" x2="19" y2="12"></line>
+                    </svg>
+                </div>
             </div>
+            <div id="discord-guilds-container" class="hidden"></div>
             <div class="guild-separator"></div>
-            <div class="guild-icon add-server-icon" id="add-server-btn" title="Ajouter un serveur">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <line x1="12" y1="5" x2="12" y2="19"></line>
-                    <line x1="5" y1="12" x2="19" y2="12"></line>
+            <div class="guild-icon discord-browse-icon" id="discord-browse-btn" title="Parcourir Discord">
+                <svg width="24" height="18" viewBox="0 0 71 55" fill="currentColor">
+                    <path d="M60.1 4.9A58.5 58.5 0 0045.4.2a.2.2 0 00-.2.1 40.8 40.8 0 00-1.8 3.7 54 54 0 00-16.2 0A39.5 39.5 0 0025.4.3a.2.2 0 00-.2-.1A58.4 58.4 0 0010.5 5 59.7 59.7 0 00.4 45a.3.3 0 00.1.2A58.9 58.9 0 0018.2 55a.2.2 0 00.3-.1 42.2 42.2 0 003.6-5.9.2.2 0 00-.1-.3 38.8 38.8 0 01-5.5-2.7.2.2 0 01 0-.4l1.1-.9a.2.2 0 01.2 0 42 42 0 0035.8 0 .2.2 0 01.2 0l1.1.9a.2.2 0 010 .4 36.4 36.4 0 01-5.5 2.7.2.2 0 00-.1.3 47.4 47.4 0 003.6 5.9.2.2 0 00.3.1A58.7 58.7 0 0070.7 45a.3.3 0 00.1-.2c1.2-12.6-2-23.6-8.7-33.3zM23.7 36.9c-2.9 0-5.3-2.7-5.3-5.9s2.3-5.9 5.3-5.9 5.3 2.7 5.3 5.9-2.4 5.9-5.3 5.9zm19.6 0c-2.9 0-5.3-2.7-5.3-5.9s2.3-5.9 5.3-5.9 5.3 2.7 5.3 5.9-2.3 5.9-5.3 5.9z"/>
                 </svg>
             </div>
         </nav>
@@ -98,7 +120,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="sidebar-section-title">
+            <div class="sidebar-section-title" id="sidebar-text-title">
                 <span>SALONS TEXTUELS</span>
                 <button id="add-room-btn" title="Créer un salon">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -108,7 +130,7 @@
                 </button>
             </div>
             <ul id="rooms-list" class="rooms-list"></ul>
-            <div class="sidebar-section-title">
+            <div class="sidebar-section-title" id="sidebar-voice-title">
                 <span>SALONS VOCAUX</span>
             </div>
             <ul id="voice-rooms-list" class="rooms-list"></ul>
@@ -1115,6 +1137,8 @@
             <!-- Populated by JS -->
         </div>
     </div>
+
+    <!-- Discord overlay panel removed — Discord now uses the main UI -->
 
     <script src="src/runtime-config.js"></script>
     <script src="src/video.js"></script>
