feat: add Discord Voice Client implementation using WebRTC
- Implemented connection to Discord Voice Gateway using WebRTC protocol.
- Added functions for joining and leaving voice channels, managing audio streams, and handling WebSocket communication.
- Included support for muting and deafening audio, as well as heartbeat management for maintaining connection.
- Created SDP offer/answer handling for establishing audio streams.
- Added error handling and state management for voice connection lifecycle.

--- a/discord-app/index.html
+++ b/discord-app/index.html
@@ -1143,6 +1143,7 @@
     <script src="src/voice.js"></script>
     <script src="src/context.js"></script>
     <script src="src/discord.js"></script>
+    <script src="src/discord-voice.js"></script>
     <script src="src/main.js"></script>
 </body>
 
